--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea's Recipes</title>
@@ -9,7 +10,19 @@
 </head>
 
 <body>
-   <h1>Odin Recipes</h1> 
-   <a href="recipes/lasagna.html">Lasagna</a>
+    <div class="title">
+        <h1>Odin Recipes Andrea Pungyan</h1> 
+    </div>
+      
+    
+   <img src="images/theOdinProject.png" alt="The Odin Project Logo" width=700 height="300">
+   <br>
+
+   <h2>Current Available Recipes</h2>
+   <ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/sinigang.html">Sinigang</a></li>
+   </ul>
+   
 </body>
 </html>
