--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,20 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <a href="../index.html">Home</a>
+    <h1 class="title">Lasagna</h1>
     <p>January 2026 | Dinner Recipes</p>
 
     <img src="../images/lasagna.jpg" alt="Lasagna in a white casserole." width="400" height="500">
 
     <h2>Ingredients you need:</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>9 lasagna noodles</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1 pound of ground beef</li>
+        <li>1 pound bulk Italian sausage</li>
+        <li>4 (15oz) cans tomato sauce</li>
+        <li>1 (16oz) can sliced washrooms, drained</li>
+        <li>1 teaspoon garlic salt</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>1/2 teaspoon dried thyme</li>
+        <li>1/4 teaspoon dried basil</li>
+        <li>salt and ground black pepper to taste</li>
+        <li>1 (15 oz) container ricotta cheese</li>
+        <li>3 large eggs, beaten</li>
+        <li>1/3 cup parmesan cheese</li>
+        <li>1 pound shredded mozzarella cheese</li>
     </ul>
+
+    <h2>Directions</h2>
+    <h3>Step 1</h3>
+    <p>Preheat the oven to 350 degrees F (175 degrees C).</p>
+    <h3>Step 2</h3>
+    <p>Cook ground beef and sausage in a large pot over medium heat; drain. Stir in tomato sauce, mushrooms, garlic salt, oregano, thyme, and basil; season with salt and black pepper. Simmer 30 minutes. </p>
+    <h3>Step 3</h3>
+    <p>Meanwhile, bring a large pot of lightly salted water to a boil. Cook lasagna noodles with olive oil in the boiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10 minutes. Drain. </p>
+    <h3>Step 4</h3>
+    <p>Meanwhile, combine ricotta cheese, eggs, and Parmesan cheese in a bowl. </p>
+    <h3>Step 5</h3>
+    <p>Cover bottom of a 9x13-inch baking dish with a thin layer of meat sauce; layer 3 lasagna noodles over top. Spread about 1/3 ricotta cheese mixture over noodles; sprinkle about 1/4 mozzarella cheese over top. Spoon about 1/3 meat sauce over mozzarella cheese. Repeat layering twice more, finishing with remaining mozzarella cheese.</p>
+    <h3>Step 6</h3>
+    <p>Bake in the preheated oven until cheese melts and sauce bubbles, about 90 minutes. Cover lasagna with foil if cheese begins to get too dark. Let sit before serving for 10 to 15 minutes. </p>
+
+
+    <a href="../index.html">Home</a>
 </body>
 </html>
