Change font on body text & overall layout

--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -9,16 +9,19 @@
 
 
 <body>
-    <a href="../index.html">Home</a>
+    <a class="home" href="../index.html">Home</a>
     <div class="title">
         <h1>My Mom's Sinigang</h1>
+        <p>January 2026 - Soup Recipes</p>
+        <img class="mainpic" src="../images/sinigang.jpg" alt="Bowl of Sinigang" width="500" height="300">
+
     </div>
     
-    <p>January 2026 | Soup Recipes</p>
+    
+<div class="bodyInfo">
 
-    <img src="../images/sinigang.jpg" alt="Bowl of Sinigang" width="500" height="300">
 
-    <h2>Ingredients you'll need:</h2>
+    <h2>Ingredients</h2>
     <ul>
         <li>Tamarind</li>
         <li>4 cups of water</li>
@@ -30,25 +33,30 @@
         <li>Gabi</li>
     </ul>
 
-    <h2>Directions</h2>
-    <h3>Step 1</h3>
-    <p>In a pot over medium heat, combine pork and enough water to cover. Bring to a boil, skimming scum that accumulates on top. </p>
-    <h3>Step 2</h3>
-    <p>Once broth clears, add tomatoes, onion, and fish sauce. Lower heat and simmer for about 1 to 1 ½ hours or until meat is tender, adding more water as necessary to maintain about 8 cups.</p>
-    <h3>Step 3</h3>
-    <p>Add gabi and cook for about 4 to 6 minutes or until tender. </p>
-    <h3>Step 4</h3>
-    <p>Add chili peppers and radish. Continue to simmer for about 2 to 3 minutes.</p>
-    <h3>Step 5</h3>
-    <p>Add long beans. Continue to cook for about 2 minutes. </p>
-    <h3>Step 6</h3>
-    <p>Add eggplant and okra and cook for another 1 to 2 minutes.</p>
-    <h3>Step 7</h3>
-    <p>Add tamarind juice or powder instant seasoning. Season with salt and pepper to taste.</p>
-    <h3>Step 8</h3>
-    <p>Add bok choy and continue to cook for about 1 minute. Serve hot.</p>
+    <ul>
 
-    <a href="../index.html">Home</a>
+    <h2>Directions</h2>
+    <h3>Step One</h3>
+    <p>In a pot over medium heat, combine pork and enough water to cover. Bring to a boil, skimming scum that accumulates on top. </p>
+    <h3>Step Two</h3>
+    <p>Once broth clears, add tomatoes, onion, and fish sauce. Lower heat and simmer for about 1 to 1 ½ hours or until meat is tender, adding more water as necessary to maintain about 8 cups.</p>
+    <h3>Step Three</h3>
+    <p>Add gabi and cook for about 4 to 6 minutes or until tender. </p>
+    <h3>Step Four</h3>
+    <p>Add chili peppers and radish. Continue to simmer for about 2 to 3 minutes.</p>
+    <h3>Step Five</h3>
+    <p>Add long beans. Continue to cook for about 2 minutes. </p>
+    <h3>Step Six</h3>
+    <p>Add eggplant and okra and cook for another 1 to 2 minutes.</p>
+    <h3>Step Seven</h3>
+    <p>Add tamarind juice or powder instant seasoning. Season with salt and pepper to taste.</p>
+    <h3>Step Eight</h3>
+    <p>Add bok choy and continue to cook for about 1 minute. Serve hot.</p>
+    </ul>
+
+    <a class="home" href="../index.html">Home</a>
+
+</div>
 
 </body>
 </html>
