--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea's Recipes</title>
 
-    <a href="./about.html">About Me</a>
+    <a class="home" href="./about.html">About Me</a>
 </head>
 
 <body>
     <div class="title">
-        <h1>Odin Recipes Andrea Pungyan</h1> 
-    </div>
-      
-    
-   <img src="images/theOdinProject.png" alt="The Odin Project Logo" width=700 height="300">
-   <br>
+        <h1>Odin Recipes</h1> 
 
-   <h2>Current Available Recipes</h2>
-   <ul>
-    <li><a href="recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="recipes/sinigang.html">Sinigang</a></li>
-   </ul>
-   
+    </div>
+
+
+    <div class="bodyInfo">
+        <h2>Current Available Recipes</h2>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/sinigang.html">Sinigang</a></li>
+        </ul>
+    </div>
+
 </body>
 </html>
