--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,14 +6,23 @@
     <title>Lasagna</title>
     <link rel="stylesheet" href="../style.css">
 </head>
+
+
+
+
 <body>
-    <a href="../index.html">Home</a>
-    <h1 class="title">Lasagna</h1>
-    <p>January 2026 | Dinner Recipes</p>
+    <a class="home" href="../index.html">Home</a>
+    <div class="title">
+        <h1>Lasagna</h1>    
+        <p>January - Dinner Recipes</p>
+        <img src="../images/lasagna.jpg" alt="Lasagna in a white casserole." width="400" height="500">
 
-    <img src="../images/lasagna.jpg" alt="Lasagna in a white casserole." width="400" height="500">
+    </div>
+    
 
-    <h2>Ingredients you need:</h2>
+<div class="bodyInfo">
+
+    <h2>Ingredients</h2>
     <ul>
         <li>9 lasagna noodles</li>
         <li>1 tablespoon olive oil</li>
@@ -32,21 +41,25 @@
         <li>1 pound shredded mozzarella cheese</li>
     </ul>
 
+    <ul> 
+
     <h2>Directions</h2>
-    <h3>Step 1</h3>
+    <h3>Step One</h3>
     <p>Preheat the oven to 350 degrees F (175 degrees C).</p>
-    <h3>Step 2</h3>
+    <h3>Step Two</h3>
     <p>Cook ground beef and sausage in a large pot over medium heat; drain. Stir in tomato sauce, mushrooms, garlic salt, oregano, thyme, and basil; season with salt and black pepper. Simmer 30 minutes. </p>
-    <h3>Step 3</h3>
+    <h3>Step Three</h3>
     <p>Meanwhile, bring a large pot of lightly salted water to a boil. Cook lasagna noodles with olive oil in the boiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10 minutes. Drain. </p>
-    <h3>Step 4</h3>
+    <h3>Step Four</h3>
     <p>Meanwhile, combine ricotta cheese, eggs, and Parmesan cheese in a bowl. </p>
-    <h3>Step 5</h3>
+    <h3>Step Five</h3>
     <p>Cover bottom of a 9x13-inch baking dish with a thin layer of meat sauce; layer 3 lasagna noodles over top. Spread about 1/3 ricotta cheese mixture over noodles; sprinkle about 1/4 mozzarella cheese over top. Spoon about 1/3 meat sauce over mozzarella cheese. Repeat layering twice more, finishing with remaining mozzarella cheese.</p>
-    <h3>Step 6</h3>
+    <h3>Step Six</h3>
     <p>Bake in the preheated oven until cheese melts and sauce bubbles, about 90 minutes. Cover lasagna with foil if cheese begins to get too dark. Let sit before serving for 10 to 15 minutes. </p>
+    </ul>
 
+</div>
 
-    <a href="../index.html">Home</a>
+    <a class="home" href="../index.html">Home</a>
 </body>
 </html>
